<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:text="@string/titulo"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuar" />

        <Button
            android:id="@+id/btnNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevo" />

        <Button
            android:id="@+id/btnAcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir" />
    </LinearLayout>

</LinearLayout>